--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^1.4.0
   google_sign_in: ^5.0.4
   intl: ^0.17.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
